# meta-android-example

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/libs/meta/: makeTemplate.sh
app/libs/meta/backend/: CMakeLists.txt  cunits
app/libs/meta/core/: shared_libs
app/libs/meta/frontend/: CMakeLists.txt
app/libs/meta/frontend/main-test/: CMakeLists.txt  main-test.cpp
app/libs/meta/template/: CMakeLists.txt  main.cpp
app/libs/meta/template/core/: CMakeLists.txt
app/src/androidTest/java/org/tuxship/ccptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/cunits/: MyComputeUnit.cpp
app/src/main/java/org/tuxship/cpptest/: MainActivity.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/tuxship/ccptest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
